YUI autocomplete now uses padding-bottom to make sure it doesn't overlap following elements.
git-svn-id: svn+ssh://bandit.bloomington.in.gov/srv/svn/master_address/trunk@511 c0873d58-3416-0410-9558-ca141da00fa8

--- a/html/skins/local/screen.css
+++ b/html/skins/local/screen.css
@@ -57,7 +57,7 @@ textarea { width:300px; }
 .missing { border:2px solid #aa0000; background-color:salmon; }
 
 /* YUI Auto-complete */
-.yui-skin-sam .yui-ac { font-size:100%; margin-bottom:1em; }
+.yui-skin-sam .yui-ac { padding-bottom:2em; }
 .yui-skin-sam .yui-ac-content li { color:black; background-color:white; }
 
 /* YUI Overlay popups */
